--- a/package.json
+++ b/package.json
@@ -55,14 +55,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@welcome-ui/button": "^2.0.2",
+    "@welcome-ui/core": "^2.8.1",
+    "@xstyled/styled-components": "^2.2.0",
+    "@xstyled/system": "^2.2.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux-saga": "^1.1.3",
-    "sass": "^1.32.4"
+    "sass": "^1.32.4",
+    "styled-components": "^5.2.1"
   },
   "husky": {
     "hooks": {
