--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@welcome-ui/box": "^2.0.2",
     "@welcome-ui/button": "^2.0.2",
     "@welcome-ui/core": "^2.8.1",
     "@xstyled/styled-components": "^2.2.0",
