Implement basic layout for job list

--- a/package.json
+++ b/package.json
@@ -57,7 +57,12 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@welcome-ui/box": "^2.0.2",
     "@welcome-ui/button": "^2.0.2",
+    "@welcome-ui/card": "^2.0.2",
     "@welcome-ui/core": "^2.8.1",
+    "@welcome-ui/date-picker": "^2.6.3",
+    "@welcome-ui/input-text": "^2.6.1",
+    "@welcome-ui/select": "^2.6.1",
+    "@welcome-ui/text": "^2.0.2",
     "@xstyled/styled-components": "^2.2.0",
     "@xstyled/system": "^2.2.0",
     "clsx": "^1.1.1",
