--- a/package.json
+++ b/package.json
@@ -66,8 +66,11 @@
     "@welcome-ui/text": "^2.0.2",
     "@xstyled/styled-components": "^2.2.0",
     "@xstyled/system": "^2.2.0",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
+    "fp-ts": "^2.9.3",
+    "io-ts": "^2.2.13",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
