--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@types/dompurify": "^2.2.1",
     "@welcome-ui/alert": "^2.1.3",
     "@welcome-ui/box": "^2.0.2",
     "@welcome-ui/button": "^2.0.2",
@@ -62,6 +63,7 @@
     "@welcome-ui/core": "^2.8.1",
     "@welcome-ui/date-picker": "^2.6.3",
     "@welcome-ui/input-text": "^2.6.1",
+    "@welcome-ui/link": "^2.0.2",
     "@welcome-ui/modal": "^2.6.1",
     "@welcome-ui/select": "^2.6.1",
     "@welcome-ui/text": "^2.0.2",
@@ -70,6 +72,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
+    "dompurify": "^2.2.6",
     "fp-ts": "^2.9.3",
     "io-ts": "^2.2.13",
     "prop-types": "^15.7.2",
