--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:clean": "rm -rf dist",
     "build:webpack": "webpack --config webpack.config.js",
     "build": "npm run all build:*",
+    "test:jest": "jest '.*\\.test\\.jsx?'",
     "test:lint": "eslint src/",
     "test:types": "tsc --noEmit",
     "test": "npm run all test:*",
@@ -21,13 +22,16 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@redux-saga/types": "^1.1.0",
+    "@testing-library/react": "^11.2.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "dotenv-defaults": "^2.0.1",
@@ -42,13 +46,13 @@
     "fs-extra": "^9.1.0",
     "html-webpack-plugin": "^4.5.1",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^1.3.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0",
